--- a/package.json
+++ b/package.json
@@ -4,8 +4,15 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@material-ui/core": "^4.9.1",
+    "@material-ui/icons": "^4.9.1",
+    "css-loader": "^3.4.2",
+    "firebase-tools": "^7.12.1",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-router-dom": "^5.1.2",
+    "react-text-truncate": "^0.16.0",
+    "style-loader": "^1.1.3"
   },
   "scripts": {
     "start": "NODE_ENV=development webpack-dev-server",
@@ -15,6 +22,7 @@
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.6",
     "babel-preset-react-app": "^9.1.1",
+    "copy-webpack-plugin": "^4.6.0",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.10.2"
